--- a/index.Rmd
+++ b/index.Rmd
@@ -248,7 +248,8 @@ Note: **else if** and **else** are optional.
 ## Exercise: SVM Classifier
 
 <font size='5'>
-`Magic Vector: c(-0.04625854, 0.5211828, -1.003045, -0.4641298)`
+`Magic Vector:` <br>
+`c(1.45284450 ,-0.04625854, 0.5211828, -1.003045, -0.4641298)`
 </font>
 
 
@@ -257,7 +258,8 @@ Note: **else if** and **else** are optional.
 ## Exercise: SVM Classifier
 
 <font size='5'>
-`Magic Vector: c(-0.04625854, 0.5211828, -1.003045, -0.4641298)`<br>
+`Magic Vector:` <br>
+`c(1.45284450, -0.04625854, 0.5211828, -1.003045, -0.4641298)`<br>
 </font>
 
 (暫時)不要問我怎麼把這個向量生出來的。(汗)
@@ -268,7 +270,8 @@ Note: **else if** and **else** are optional.
 ## Exercise: SVM Classifier
 
 <font size='5'>
-`Magic Vector: c(-0.04625854, 0.5211828, -1.003045, -0.4641298)`<br>
+`Magic Vector:` <br> 
+`c(1.45284450, -0.04625854, 0.5211828, -1.003045, -0.4641298)`<br>
 </font>
 
 或許你可以問助教，助教都比我厲害。
@@ -288,9 +291,9 @@ Note: **else if** and **else** are optional.
 
 ## Exercise: SVM Classifier
 
-> 1. 寫個 if 迴圈計算 X1 中某一筆資料與 magic vector 內積的結果。<br> (sum(X1[i, ] * magic_vec))
-> 2. 如果內積值大於或等於 -1，print('setosa');反之，print('versicolor')
-> 3. 跟 y1 比對一下，有何發現？
+> 1. 寫個 if 迴圈計算 X1 中某一筆資料與 magic_vector 內積的結果。<br> (sum(X1[i, ] * magic_vec), i 可以是1~100任何一個整數)
+> 2. 如果內積值大於或等於 0，print('setosa');反之，print('versicolor')
+> 3. 跟 y1[i] 比對一下，有何發現？
 
 
 --- .segue bg:green
@@ -315,7 +318,7 @@ final_result <- 0
 for (i in 1:10){
         final_result <- final_result + i
 }
-(final_result)
+final_result
 ```
 
 
@@ -346,8 +349,7 @@ vec2 <- c('a', 'b', 'c')
 - Named Vector:
 
 ```{r, results = 'hold'}
-Bob <- c(age = 27, height = 187, weight = 80)
-Bob
+(Bob <- c(age = 27, height = 187, weight = 80))
 ```
 
 ---
@@ -399,6 +401,7 @@ vec1[1] + vec2[3]
 ## Examples (Cont.)
 
 ```{r, results = 'hold'}
+Bob
 names(Bob)
 Bob['age']   # reference by name.
 ```
@@ -447,7 +450,7 @@ Bob['age']   # reference by name.
 
 ```{r, results='hold'}
 Bob <- list(age=27, weight = 80,
-            favorite_data_name = 'iris', favorite_data = iris)
+            favorite_data_name = 'iris', favorite_data = head(iris))
 (age1 <- Bob[1])
 class(age1)
 (age2 <- Bob[[1]])
@@ -460,7 +463,7 @@ class(age2)
 
 ```{r, results='hold'}
 (Age_and_DataName <- Bob[c(1, 3)])
-head(Bob[['favorite_data']])
+Bob[['favorite_data']]
 ```
 
 
@@ -468,16 +471,9 @@ head(Bob[['favorite_data']])
 
 ## Play With List
 
-### `Warmup for Battleship Mini Project: Drawing the Map`
-
 ```{r, results = 'hold'}
-map =list(c('O', 'O', 'O', 'O', 'O'),
-          c('O', 'O', 'O', 'O', 'O'),
-          c('O', 'O', 'O', 'O', 'O'),
-          c('O', 'O', 'O', 'O', 'O'),
-          c('O', 'O', 'O', 'O', 'O'))
-for (i in 1:length(map)){
-        print(map[[i]])
+for (Attribute in Bob){
+        print(Attribute)
 }
 ```
 
@@ -652,7 +648,7 @@ head(iris6)
 
 `之後會在 ETL 課程再度碰到它，也會學到進階的資料處理技巧。`
 
-到[這裡](https://raw.githubusercontent.com/ntuaha/TWFS/master/db/cl_info_other.csv)下載檔案。(cl_info_other.csv)
+到[這裡](https://dl.dropboxusercontent.com/u/5487490/MLDM%20Monday/RBasic/cl_info_other.csv)下載檔案。(cl_info_other.csv)
 
 
 ---
@@ -697,6 +693,40 @@ DF <- read.table('cl_info_other.csv', sep = ',',
 4. 將 mortgage_cnt >= 22538 的資料另外儲存成 banks_above。
 5. 將 banks_below 與 banks_above 合併成 DF2。
 6. 將 DF2 先依 mortgage_cnt 再依 mortgage_bal 排序。(Hint: order)
+
+
+---
+
+## Exercises:
+
+1. 顯示 DF 前 20 筆資料與所有欄位的名稱。
+3. 將 mortgage_cnt < 2053 的資料另外儲存成 banks_below。
+4. 將 mortgage_cnt >= 22538 的資料另外儲存成 banks_above。
+5. 將 banks_below 與 banks_above 合併成 DF2。
+6. 將 DF2 先依 mortgage_cnt 再依 mortgage_bal 排序。(Hint: order) 
+
+<br>
+
+<font size='6'>
+`學員OS: 這作業實在太 trivial 了，簡直侮辱我的智慧。`
+</font>
+
+
+---
+
+## Exercises:
+
+1. 顯示 DF 前 20 筆資料與所有欄位的名稱。
+3. 將 mortgage_cnt < 2053 的資料另外儲存成 banks_below。
+4. 將 mortgage_cnt >= 22538 的資料另外儲存成 banks_above。
+5. 將 banks_below 與 banks_above 合併成 DF2。
+6. 將 DF2 先依 mortgage_cnt 再依 mortgage_bal 排序。(Hint: order) 
+
+<br>
+
+<font size='6'>
+`接下來的 ETL 課程保證會滿足你的渴望!`
+</font>
 
 --- .segue bg:green
 
