--- a/index.Rmd
+++ b/index.Rmd
@@ -286,7 +286,7 @@ Note: **else if** and **else** are optional.
 `c(1.45284450, -0.04625854, 0.5211828, -1.003045, -0.4641298)`<br>
 </font>
 
-或許你可以問助教，助教都比我厲害。
+或許你可以問助教，助教什麼都會!
 
 
 ---
